src/test/ui/traits/issue-72410.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-72410.rs:14:19
   |
LL |     where for<'a> &'a mut [dyn Bar]: ;
   |                   ^^^^^^^^^^^^^^^^^ `Bar` cannot be made into an object
   |
note: for a trait to be "object safe" it needs to allow building a vtable to allow the call to be resolvable dynamically; for more information visit <https://doc.rust-lang.org/reference/items/traits.html#object-safety>
  --> $DIR/issue-72410.rs:13:8
   |
LL | pub trait Bar {
   |           --- this trait cannot be made into an object...
LL |     fn map()
   |        ^^^ ...because associated function `map` has no `self` parameter
help: consider turning `map` into a method by giving it a `&self` argument
   |
LL |     fn map(&self)
   |            ^^^^^
help: alternatively, consider constraining `map` so it does not apply to trait objects
   |
LL |     where for<'a> &'a mut [dyn Bar]:, Self: Sized ;
   |                                     ^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0038`.
